# pyautoexcel

./: README.md  pyproject.toml
pyautoexcel/: __init__.py  tempCodeRunnerFile.py
tests/: test_init.py
tests/data/: demo.xlsx  demo2.xlsx
